--- a/package.json
+++ b/package.json
@@ -3,9 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
+    "axios": "^0.19.2",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
+    "cors": "^2.8.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-fontawesome": "^1.7.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.1.1",
+    "uuid": "^3.3.3",
+    "w3-css": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
